# TeaPacket

./: .gitignore  AssetReader_8hpp.html  AssetReader_8hpp.js  AssetReader_8hpp_source.html  AssetStream_8hpp.html  AssetStream_8hpp.js  AssetStream_8hpp_source.html  Assets_2AssetReader_8hpp.html  Assets_2AssetReader_8hpp.js  Assets_2AssetReader_8hpp_source.html  CMakeLists.txt  CMakeSettings.json  CMakeVars.html  CMakeVars.js  CMakeVars_8md.html  Color3_8hpp.html  Color3_8hpp.js  Color3_8hpp_source.html  Color4_8hpp.html  Color4_8hpp.js  Color4_8hpp_source.html  DebugLevels_8hpp.html  DebugLevels_8hpp.js  DebugLevels_8hpp_source.html  Display_8hpp.html  Display_8hpp_source.html  EndianSwapper_8hpp.html  EndianSwapper_8hpp.js  EndianSwapper_8hpp_source.html  Endianness_8hpp.html  Endianness_8hpp.js  Endianness_8hpp_source.html  Files_2AssetReader_8hpp.html  Files_2AssetReader_8hpp.js  Files_2AssetReader_8hpp_source.html  Graphics_8hpp.html  Graphics_8hpp.js  Graphics_8hpp_source.html  Interface_8hpp.html  Interface_8hpp.js  (+142 more)
.github/workflows/: doxygen-gh-pages.yml
buildinfo/Windows/: post-app.cmake
doxygen/: generate.bat  private.doxyfile  public.doxyfile
doxygen/custom/: CMakeVars.md  TP_DEBUG.md
doxygen/private/html/: _display_8hpp.html  _display_8hpp_source.html  _graphics_8hpp_source.html  _interface_8hpp_source.html  _pl___display_8hpp.html  _pl___display_8hpp.js  _pl___display_8hpp_source.html  _pl___graphics_8hpp.html  _pl___graphics_8hpp.js  _pl___graphics_8hpp_source.html  _pl___interface_8hpp.html  _pl___interface_8hpp.js  _pl___interface_8hpp_source.html  _platform_2_windows_2_graphics_2_display_8cpp.html  _platform_2_windows_2_graphics_2_graphics_8cpp.html  _platform_2_windows_2_interface_2_display_8cpp.html  _platform_2_windows_2_interface_2_interface_8cpp.html  _platform_2_windows_2_interface_2_interface_8cpp.js  _platform_display_8hpp.html  _platform_display_8hpp.js  _platform_display_8hpp_source.html  _platform_interface_8hpp.html  _platform_interface_8hpp.js  _platform_interface_8hpp_source.html  _tea_packet_2_graphics_2_display_8cpp.html  _tea_packet_2_graphics_2_graphics_8cpp.html  _tea_packet_2_interface_2_display_8cpp.html  _tea_packet_2_interface_2_interface_8cpp.html  _tea_packet_8cpp.html  _tea_packet_8hpp_source.html  _test_2_platform_2_interface_2_platform_display_8hpp.html  _test_2_platform_2_interface_2_platform_display_8hpp.js  _test_2_platform_2_interface_2_platform_display_8hpp_source.html  _windows_2_platform_2_interface_2_platform_display_8hpp.html  _windows_2_platform_2_interface_2_platform_display_8hpp.js  _windows_2_platform_2_interface_2_platform_display_8hpp_source.html  annotated.html  annotated_dup.js  class_tea_packet_1_1_graphics_1_1_display-members.html  class_tea_packet_1_1_graphics_1_1_display.html  (+73 more)
doxygen/public/html/: _display_8hpp.html  _display_8hpp_source.html  _graphics_8hpp.html  _graphics_8hpp.js  _graphics_8hpp_source.html  _interface_8hpp.html  _interface_8hpp.js  _interface_8hpp_source.html  _tea_packet_8hpp.html  _tea_packet_8hpp.js  _tea_packet_8hpp_source.html  annotated.html  annotated_dup.js  class_tea_packet_1_1_graphics_1_1_display-members.html  class_tea_packet_1_1_graphics_1_1_display.html  class_tea_packet_1_1_graphics_1_1_display.js  class_tea_packet_1_1_interface_1_1_display-members.html  class_tea_packet_1_1_interface_1_1_display.html  class_tea_packet_1_1_interface_1_1_display.js  classes.html  dir_971a4c01cdc007577b6fae63e09b3f63.js  dir_9f9a15fcb8dd519edb06e5411c5528a3.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e8de427f5dea2753edb6c09e88998df9.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  namespace_tea_packet.js  namespace_tea_packet_1_1_graphics.html  namespace_tea_packet_1_1_graphics.js  namespace_tea_packet_1_1_interface.html  namespace_tea_packet_1_1_interface.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  navtreedata.js  (+1 more)
examples/: CMakeLists.txt
examples/mystictest/: CMakeLists.txt  main.cpp
examples/mystictest/assets/: test.tga  testmodelverts  testmodelverts.bak
examples/mystictest/assets/shaders/: color.frag  color.vert  textured.frag
examples/tgaLoader/: CMakeLists.txt  main.cpp
examples/tgaLoader/assets/nums/: 0.tga  1.tga  2.tga  3.tga  4.tga
examples/tgaLoader/assets/shaders/: textured.frag  textured.vert
include/TeaPacket/: TeaPacket.hpp
include/TeaPacket/Assets/: AssetReader.hpp  AssetStream.hpp
include/TeaPacket/Debug/: DebugLevels.hpp  Logging.hpp
include/TeaPacket/Error/: NotImplemented.hpp
include/TeaPacket/Files/: AssetReader.hpp
include/TeaPacket/Graphics/: Color3.hpp  Color4.hpp  Display.hpp  Graphics.hpp  Model.hpp  Shader.hpp  ShaderVariable.hpp  Texture.hpp  Viewport.hpp
include/TeaPacket/Interface/: Interface.hpp
include/TeaPacket/Math/: Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/TeaPacket/Memory/: EndianSwapper.hpp  Endianness.hpp  StructUtils.hpp
prebuild/: prebuild.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+42 more)
source/: TeaPacket.cpp
source/Assets/: AssetReader.cpp  AssetStream.cpp  Pl_AssetReader.hpp
source/Assets/AssetReaders/: TGAReader.cpp
source/Debug/: Logging.cpp  Pl_Logging.hpp
source/Files/: AssetReader.cpp  Pl_AssetReader.hpp
source/Graphics/: Display.cpp  Graphics.cpp  Model.cpp  Pl_Graphics.hpp  Shader.cpp  Texture.cpp  Viewport.cpp
source/Graphics/Texture/: Texture.cpp  TextureConversion.cpp  TextureConversion.hpp
source/Interface/: Interface.cpp  Pl_Interface.hpp
source/TeaPacket/: TeaPacket.cpp
(+64 files in other folders)
